compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__variable_annotation_with_try.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x: Result(Nil, Nil) = {\n            let a_var = 1\n            try _ = Error(1)\n            Ok(Nil)\n        }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:3:13
  │  
3 │ ╭             try _ = Error(1)
4 │ │             Ok(Nil)
  │ ╰───────────────────^

Expected type:

    Result(Nil, Nil)

Found type:

    Result(Nil, Int)


