compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__wrong_number_of_subjects_multiple_subjects.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case 1, 2 { _ -> 1 }"
---
----- SOURCE CODE
case 1, 2 { _ -> 1 }

----- ERROR
error: Incorrect number of patterns
  ┌─ /src/one/two.gleam:1:13
  │
1 │ case 1, 2 { _ -> 1 }
  │             ^ Expected 2 patterns, got 1

This case expression has 2 subjects, but this pattern matches 1.
Each clause must have a pattern for every subject value.
