compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__wrong_type_ret.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "pub fn main(x: something) -> Int {\n  let y = x\n  y\n}"
---
----- SOURCE CODE
pub fn main(x: something) -> Int {
  let y = x
  y
}

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:3
  │
3 │   y
  │   ^

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    Int

Found type:

    something
