compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__wrong_type_var.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn wibble(x: String) { x }\nfn multi_result(x: some_name) {\n  wibble(x)\n}"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:3:10
  │
3 │   wibble(x)
  │          ^

Expected type:

    String

Found type:

    some_name
